Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8313

Got an error writing communication packets

    XMLWordPrintable

Details

    Description

      From time to time, in various systems, processes, and in this case even backup, we get the error. An example is from mysqldump: '

      Dumping MySQL database adwords ..
      .. dump failed! mysqldump: Couldn't execute 'show table status like 'Nextag_Products_Bids_Working'': Got an error writing communication packets (1160)

      Right in the middle of dumping the database. None of them make any sense, the database tables are local, communication is via socket. Many times, it's near the beginning of a program, so, it's opened the database, maybe read something like the date from MySQL, and, then immediately does something, which fails with this error. This is the second time this week for the mysqldump error. No message is logged in the mariadb error log. here is the my.cnf file:

      [mysqld]
      datadir=/home/mysql
      socket=/var/lib/mysql/mysql.sock
      tmpdir=/home/mysqltemp
      user=mysql
      log-bin=/var/lib/mysqllogs/binlog
      expire_logs_days = 3
      sync_binlog=0
      server-id = 108
      collation-server=latin1_general_cs
      group_concat_max_len = 2M
      symbolic-links=0
      wait_timeout = 14400
      connect_timeout = 50
      max_heap_table_size = 256M
      tmp_table_size = 256M
      max_allowed_packet = 64M
      max_connect_errors = 50
      innodb_stats_sample_pages=12
      innodb_file_per_table = 1
      innodb_flush_log_at_trx_commit = 0
      innodb_log_buffer_size = 8M
      innodb_log_file_size = 512M
      innodb_buffer_pool_size= 8G
      # MyISAM tuning
      key_buffer_size=512M
      myisam_sort_buffer_size = 64M
      join_buffer_size = 512K
      bulk_insert_buffer_size = 512M
      read_rnd_buffer_size = 1M
      #
      innodb_flush_method = O_DIRECT
      default-storage-engine = Innodb
      net_read_timeout = 600
      net_write_timeout = 600
      log-error=/var/log/mariadb/mariadb.log
      pid-file=/var/run/mariadb/mariadb.pid
      # myisam_use_mmap
       
      [mysqld_safe]
      log-error=/var/log/mariadb/mariadb.log
      pid-file=/var/run/mariadb/mariadb.pid
       
      !includedir /etc/my.cnf.d

      No settings are in my.cnf.d

      Nothing much is going on during the time the backup runs, machine very idle.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            sfatula Steve Fatula
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.5h
                1.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.